2008-11-14  Curtis Gedak  <gedakc@gmail.com>

	* include/Utils.h, 
	  src/Utils.cc: Created method get_filesystem_software().

	* src/Win_GParted.cc: Moved menu entry
	- "Gparted->Show Features" moved to "View->File System Support".

2008-11-13  Curtis Gedak  <gedakc@gmail.com>

	* include/FS_Info.h,
	  src/FS_Info.cc,
	  src/GParted_Core.cc,
	  README: Improved read label performance with blkid cached results.
	  - When possible use blkid cached results to determine volume label.

2008-11-12  Curtis Gedak  <gedakc@gmail.com>

	* README: Updated directories and dependencies.

2008-11-11  Curtis Gedak  <gedakc@gmail.com>

	* src/Dialog_Partition_Info.cc,
	  src/GParted_Core.cc:  Added read and display UUID.

	* include/Partition.h,
	  src/Partition.h: Added UUID.

	* include/FS_Info.h,
	  include/Makefile.am,
	  src/FS_Info.cc,
	  src/Makefile.am:  Created class to read file system UUIDs.

2008-11-10  Curtis Gedak  <gedakc@gmail.com>

	* src/fat16.cc,
	  src/fat32.cc:  Enforced fat compliant label before writing.
	  - Trimmed trailing spaces from label upon reading.

	* include/Utils.h,
	  src/Utils.cc:  Created new method fat_compliant_label().
	  - Limit volume label to 11 characters.

2008-11-08  Curtis Gedak  <gedakc@gmail.com>

	* include/ext2.h,
	  include/ext3.h,
	  include/fat16.h,
	  include/fat32.h,
	  include/hfs.h,
	  include/hfsplus.h,
	  include/jfs.h,
	  include/linux_swap.h,
	  include/ntfs.h,
	  include/reiser4.h,
	  include/reiserfs.h,
	  include/xfs.h,
	  include/ufs.h: Renamed set_label and get_label methods.

	* src/ext2.cc,
	  src/ext3.cc,
	  src/fat16.cc,
	  src/fat32.cc,
	  src/hfs.cc,
	  src/hfsplus.cc,
	  src/jfs.cc,
	  src/linux_swap.cc,
	  src/ntfs.cc,
	  src/reiser4.cc,
	  src/reiserfs.cc,
	  src/ufs.cc,
	  src/xfs.cc: Renamed set_label and get_label methods.
	
	* include/FileSystem.h,
	  include/GParted_Core.h,
	  include/Utils.h: Renamed set_label and get_label methods.
	
	* src/DialogFeatures.cc
	  src/FileSystem.cc,