@@ -1,5 +1,13 @@
 2008-11-14  Curtis Gedak  <gedakc@gmail.com>
 
+	* include/DialogFeatures.h,
+	  src/DialogFeatures.cc: Improved dialog readability.
+	  - Changed title Features to File System Support.
+	  - Renamed button Refresh to Rescan Support.
+	  - Created expander for legend and added narrative.
+	  - Removed columns detect and read.
+	  - Closes GParted bugs #342682, and #353104
+
 	* include/Utils.h, 
 	  src/Utils.cc: Created method get_filesystem_software().
 
